--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
 }
 
 .contenedor{
@@ -59,9 +59,45 @@ h3{
 font-size: 2.4rem;
 }
 
+/**header**/
+.header{
+    display: flex;
+    justify-content: center;
+}
+.header__logo{
+    margin: 3rem 0;
+}
 
+/**footer**/
+.footer{
+    background-color: var(--primariooscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
 
+.footer_texto{
+    font-family: var(--fuenteprincipal);
+    text-align: center;
+    font-size: 2.2rem;
+}
 
+/**Navegacuion**/
+.navegacion{
+background-color: var(--primariooscuro);
+padding: 1rem 0 ;
+display: flex;
+justify-content: center;
+gap: 2rem;
+}
+.navegacion__enlace{
+font-family: var(--fuenteprincipal);
+color: var(--blanco);
+font-size: 3rem;
+}
+.navegacion__enlace--activo,
+.navegacion__enlace:hover{
+color: var(--secundario);
+}
 
 
 
