--- a/css/style.css
+++ b/css/style.css
@@ -100,11 +100,75 @@ color: var(--secundario);
 }
 
 
+/**grid**/
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1rf);
+}
 
+@media (min-width: 768px){
+    .grid{
+        grid-template-columns: repeat(3,1rf);
+    }
+}
 
+/**Productos**/
 
+.productos{
+background-color: var(--primariooscuro);
+padding: 1rem;
+}
+.productos_imagen{
+width: 100%;
+}
+.productos_informacion{
 
+}
+.productos_nombre{
+    font-size: 4rem ;
+}
+.productos_precio{
+    font-size: 2.8rem ;
+    color: var(--secundario);
+}
+.productos_nombre,
+.productos_precio{
+font-family: var(--fuenteprincipal);
+margin: 1rem 0;
+text-align: center;
+}
 
+/***Grafico**/
+.grafico{
+min-height: 30rem;
+background-repeat: no-repeat;
+background-size: cover;
+grid-column: 1/3;
+}
+.grafico--camisa{
+grid-row: 2/3;
+background-image: url(../img/grafico1.jpg);
+}
+.grafico--node{
+    background-image: url(../img/grafico2.jpg);
+    
+}
+@media(min-width:768px){
+.grafico--node{
+    grid-row: 5/6;
+    grid-column: 2/4;
+}}
+/**Nosotros**/
+.nosotros{
+display: grid;
+grid-template-columns: repeat(2,1fr);
+}
+.nosotros__contenido{
+
+}
+.nosotros.imagen{
+
+}
 
 
 
