--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,13 @@ grid-template-columns: repeat(2,1fr);
 .nosotros__contenido{
 
 }
-.nosotros.imagen{
-
+.nosotros__imagen{
+grid-row: 1/2;
+}
+@media (min-width: 768px){
+    .nosotros__imagen{
+        grid-column: 2/3;
+    }
 }
 
 
